--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,7 @@
 <!-- <div class="container-fluid" ng-controller="indexCtrl"> -->
-<div class="container-fluid" ng-controller="homeCtrl">
-	<p>Some text</p>
+<div ng-controller="homeCtrl">
+	<!-- <p>Some text</p> -->
+	<img src="imgs/collage.png" id="collage">
 </div>
 
 <div class="footer text-center container-fluid">Copyright &copy; Crystal R. Williams</div>
