push any changes

--- a/public/includes/menuBar.html
+++ b/public/includes/menuBar.html
@@ -18,12 +18,12 @@
 			</ul>
 
 			<ul class="nav nav-sidebar" id="embedded-sidebar" ng-show="isLoggedIn">
-				<li><a href="/dash"><span class="glyphicon glyphicon-home"> Dashboard</span></a></li>
-				<li><a href="/profile"><span class="glyphicon glyphicon-pencil"> Profile</span></a>
+				<li><a href="#/dash"><span class="glyphicon glyphicon-home"> Dashboard</span></a></li>
+				<li><a href="#/profile"><span class="glyphicon glyphicon-pencil"> Profile</span></a>
 					<ul>
 						<li><span class="glyphicon glyphicon-cog"> Change Password</span></li>
 					</ul></li>
-				<li><a href="/uploads"><span class="glyphicon glyphicon-open"> Uploads</span></a></li>
+				<li><a href="#/uploads"><span class="glyphicon glyphicon-open"> Uploads</span></a></li>
 				<li><a href="#"><span class="glyphicon glyphicon-education"> Scholarships</span></a></li>
 			</ul>
 
