--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,7 +1,8 @@
 <!-- <div class="container-fluid" ng-controller="indexCtrl"> -->
 <div ng-controller="homeCtrl">
 	<!-- <p>Some text</p> -->
-	<img src="imgs/collage.png" id="collage">
+	<!-- <img src="imgs/collage.png" id="collage"> -->
+	<img src="imgs/collage2.png" id="collage">
 </div>
 
 <div class="footer text-center container-fluid">Copyright &copy; Crystal R. Williams</div>
